# RSA

./: .gitignore  ARCHITECTURE.md  DOCUMENTATION_GUIDE.md  DQReport.py  Excel_migration.md  KladRapport.py  LegacyHistoryReport.py  LegacyReport.py  MailContent.py  MailSender.py  Neo4JConnector.py  OTLCursorPool.py  PostGISConnector.py  QUICK_REFERENCE.md  README.md  README_main_selection_list.md  Report.py  ReportLoopRunner.py  SheetsCell.py  SheetsWrapper.py  all_arango_reports.py  analyse  analysis.md  architecture.md  checkEAN.py  context.md  context_reports.md  dev_main.py  factories.py  implementation_details.md  mail_test.py  main.py  main_selection_list.py  prompt.txt  pyproject.toml  requirements.txt  restart_service.py  run_single_report.py  settings_parallel_example.json  settings_sample.json  (+7 more)
AQL/: json2excel.fmw  readMe.md
ArchivedReports/: README.md  Report0001.py  Report0006.py  Report0008.py  Report0011.py  Report0021.py  Report0022.py  Report0027.py  Report0028.py  Report0029.py  Report0036.py  Report0049.py  Report0050.py  Report0051.py  Report0052.py  Report0053.py  Report0054.py  Report0055.py  Report0056.py  Report0074.py  Report0103.py  Report0104.py  Report0115.py  Report0117.py  Report0133.py  Report0135.py  Report0144.py  Report0158.py  Report0178.py
RSA_OneDrive/: spreadsheet_mapping.json
Reports/: Report0000.py  Report0001.py  Report0002.py  Report0003.py  Report0004.py  Report0005.py  Report0006.py  Report0007.py  Report0008.py  Report0009.py  Report0010.py  Report0011.py  Report0012.py  Report0013.py  Report0014.py  Report0015.py  (+214 more)
(+119 files in other folders)
